<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragment.SettingsFragment">
    <TextView
        android:id="@+id/titleSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="22dp"
        android:fontFamily="@font/dm_sans_bold"
        android:text="Settings"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSearch">
        <ImageView
            android:id="@+id/about_ic"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_about"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:text="@string/about"
            android:textColor="@color/setting_textcolor"
            android:textSize="18sp"
            android:fontFamily="@font/dm_sans_medium"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/about_ic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_back_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="22dp"
        android:background="@color/linecolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_about"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1">
        <ImageView
            android:id="@+id/reminder_ic"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_alarm"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/reminder_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:text="@string/reminders"
            android:textColor="@color/setting_textcolor"
            android:textSize="18sp"
            android:fontFamily="@font/dm_sans_medium"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/reminder_ic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_back_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="22dp"
        android:background="@color/linecolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_reminder"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2">
        <ImageView
            android:id="@+id/export_ic"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_export"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/export_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:text="@string/export_data"
            android:textColor="@color/setting_textcolor"
            android:textSize="18sp"
            android:fontFamily="@font/dm_sans_medium"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/export_ic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_back_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="22dp"
        android:background="@color/linecolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_export"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group_appearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line3">
        <ImageView
            android:id="@+id/appearance_ic"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_appearnce"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/appearance_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:text="@string/appearance"
            android:textColor="@color/setting_textcolor"
            android:textSize="18sp"
            android:fontFamily="@font/dm_sans_medium"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/appearance_ic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_back_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="22dp"
        android:background="@color/linecolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_appearance"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group_passcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line4">
        <ImageView
            android:id="@+id/passcode_ic"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_passcode"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/passcode_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:text="@string/passcode"
            android:textColor="@color/setting_textcolor"
            android:textSize="18sp"
            android:fontFamily="@font/dm_sans_medium"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/passcode_ic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_back_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="22dp"
        android:background="@color/linecolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_passcode"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line5">
        <ImageView
            android:id="@+id/support_ic"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_support"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <TextView
            android:id="@+id/support_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:text="@string/support"
            android:textColor="@color/setting_textcolor"
            android:textSize="18sp"
            android:fontFamily="@font/dm_sans_medium"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/support_ic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_back_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
